option('with-static-binary', type: 'boolean', value: 'false', description: 'Build a static binary')

# Control what modules usysconf knows about
option('with-linux-driver-management', type: 'boolean', value: 'true', description: 'Enable linux-driver-management support')
option('with-clr-boot-manager', type: 'boolean', value: 'true', description: 'Enable clr-boot-manager support')

option('with-systemd', type: 'boolean', value: 'true', description: 'Enable systemd support')

# Used for boot management bits (like depmod)
option('with-kernel-modules-dir', type: 'string', value: '/lib/modules', description: 'Path to the kernel module base tree')
# clr-boot-manager specific currently
option('with-kernel-dir', type: 'string', value: '/usr/lib/kernel', description: 'Path to the vendor kernel tree')
